--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ defaults:
     related: true
 locale: en
 title_separator: "-"
-name: Your Name
+name: Momarch
 description: An amazing website.
 url: 
 baseurl: 
