--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ analytics:
 author:
   name: Your Name
   avatar: 
-  bio: I am an amazing person.
-  location: Somewhere
+  bio: I'm justing thinking.
+  location: The Livingroom
   email: 
   uri: 
   bitbucket: 
